# Vision-Based-Smart-Inventory-Detection-System

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  demo.db  error.txt  pyproject.toml
backend/app/: __init__.py  cli.py  config.py  deps.py  main.py
backend/app/api/: routes_inference.py  routes_inventory.py
backend/app/domain/: __init__.py  reconciliation.py
backend/app/persistence/: __init__.py  database.py  models.py  repository.py
backend/app/vision/: __init__.py  detector.py  ocr.py  pipeline.py
backend/app/web/: index.html
backend/scripts/: seed.py
backend/tests/: conftest.py  test_api.py  test_persistence.py  test_pipeline.py  test_reconciliation.py
